--- a/stable/logdna-agent/values.yaml
+++ b/stable/logdna-agent/values.yaml
@@ -7,13 +7,14 @@ logdna:
   ## Please follow directions from https://app.logdna.com/pages/add-source
 
   ## An ingestion key is required for this chart to run
-  # key:
+  key: ""
 
   ## Optional settings
-  autoupdate: 0
-  # tags:
-
-  name: logdna-agent
+  autoupdate: "0"
+  tags: ""
+  
+  ldApiIHost: "api.logdna.com"
+  ldLogHost: "logs.logdna.com"
 
 resources:
   requests:
