address internal review comments

--- a/stable/logdna-agent/Chart.yaml
+++ b/stable/logdna-agent/Chart.yaml
@@ -15,7 +15,7 @@ keywords:
 - logger
 - amd64
 - Operations
-- OpenSource
+- Commercial
 - ICP
 home: https://logdna.com
 icon: https://logdna.com/assets/images/logdna_logo_240w.png
