remove secret generation, fix new linter issues
- secrets should be pre-created (passing sensitive data using helm values is insecure)
- converted logdna.key to logdna.ingestionKeySecret
- updated readme and all other references to reflect logdna.ingestionKeySecret
- supplied correct license (Apache 2.0)
- upgrade daemonset to apps/v1 from extensions/v1beta1
- supply suggested labels, selectors, and affinity
- added liveness and readiness probes

--- a/stable/logdna-agent/values-metadata.yaml
+++ b/stable/logdna-agent/values-metadata.yaml
@@ -26,10 +26,10 @@ logdna:
   __metadata:
     label: LogDNA
     description: logdna configuration values
-  key:
+  ingestionKeySecret:
     __metadata:
       label: Ingestion Key
-      description: An ingestion key is required for this chart to run
+      description: The name of the kubernetes secret which contains the ingestion key
       type: string
       required: true
 
