--- a/stable/logdna-agent/templates/daemonset.yaml
+++ b/stable/logdna-agent/templates/daemonset.yaml
@@ -1,5 +1,5 @@
-{{- if .Values.logdna.key -}}
-apiVersion: extensions/v1beta1
+{{- if .Values.logdna.ingestionKeySecret -}}
+apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: {{ template "logdna.name" . }}
@@ -7,14 +7,33 @@ metadata:
     app.kubernetes.io/name: {{ template "logdna.name" . }}
     helm.sh/chart: {{ template "logdna.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{.Release.Service }}
+    app.kubernetes.io/instance: {{.Release.Name }}
+    release: {{.Release.Name }}
 spec:
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: {{ template "logdna.name" . }}
+      release: {{.Release.Name }}
   template:
     metadata:
       labels:
         app.kubernetes.io/name: {{ template "logdna.name" . }}
-        helm.sh/chart: {{ template "logdna.chart" . }}
+        helm.sh/chart: {{ template "logdna.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
+        app.kubernetes.io/managed-by: {{.Release.Service }}
+        app.kubernetes.io/instance: {{.Release.Name }}
+        release: {{.Release.Name }}
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: beta.kubernetes.io/arch
+                operator: In
+                values:
+                  - amd64
       containers:
       - name: {{ template "logdna.name" . }}
         image: "{{.Values.image.name}}:{{.Values.image.tag}}"
@@ -27,7 +46,7 @@ spec:
           - name: LOGDNA_AGENT_KEY
             valueFrom:
               secretKeyRef:
-                name: {{ .Release.Name }}-{{ template "logdna.name" . }}
+                name: {{ .Values.logdna.ingestionKeySecret }}
                 key: logdna-agent-key
           - name: LOGDNA_PLATFORM
             value: k8s
@@ -64,6 +83,20 @@ spec:
           mountPath: /etc/os-release
         - name: logdnahostname
           mountPath: /etc/logdna-hostname
+        livenessProbe:
+          exec:
+            command:
+              - /usr/bin/logdna-agent
+              - --version
+          initialDelaySeconds: 30
+          periodSeconds: 30
+        readinessProbe:
+          exec:
+            command:
+              - /usr/bin/logdna-agent
+              - --version
+          initialDelaySeconds: 30
+          periodSeconds: 30
       volumes:
       - name: varlog
         hostPath:
